Update docker image digest

--- a/kdenlive/docker-compose.yml
+++ b/kdenlive/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   server:
-    image: linuxserver/kdenlive:421.12.3
+    image: linuxserver/kdenlive:421.12.3@sha256:c9fd0cb367e32f74259eb3293674da8f6107a8e6d6b5136965001d5c8e0f486b
     restart: on-failure
     environment:
       - PUID=1000
