--- a/kdenlive/docker-compose.yml
+++ b/kdenlive/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "3.7"
 
 services:
+  app_proxy:
+    environment:
+      APP_HOST: kdenlive_server_1
+      APP_PORT: 3000
   server:
     image: linuxserver/kdenlive:421.12.3@sha256:c9fd0cb367e32f74259eb3293674da8f6107a8e6d6b5136965001d5c8e0f486b
     restart: on-failure
@@ -10,5 +14,3 @@ services:
       - SUBFOLDER=/
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
-    ports:
-      - 3000:3000
