Add submission metadata

--- a/mylar3/umbrel-app.yml
+++ b/mylar3/umbrel-app.yml
@@ -85,4 +85,4 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 submitter: Pranshu Agrawal
-submission: 
+submission: https://github.com/getumbrel/umbrel-apps/pull/221
