fix typo in app proxy

--- a/mylar3/docker-compose.yml
+++ b/mylar3/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: trilium-note_server_1
+      APP_HOST: mylar_server_1
       APP_PORT: 8090
   server:
     image: linuxserver/mylar3:0.6.9@sha256:d07a8e6311fa24770c59c4f4690857b833ba2e9c087ec70b3c6684ea14e774ca
