add default user and pass.

--- a/nginx-proxy-manager/umbrel-app.yml
+++ b/nginx-proxy-manager/umbrel-app.yml
@@ -39,8 +39,8 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: /web
-defaultUsername: ""
-defaultPassword: ""
+defaultUsername: "admin@example.com"
+defaultPassword: "changeme"
 torOnly: false
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/250
