--- a/airsonic-advanced/docker-compose.yml
+++ b/airsonic-advanced/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "2.1"
 
 services:
+  app_proxy:
+    environment:
+      APP_HOST: airsonic_adv_app_proxy
+      APP_PORT: 4040
   server:
     image: linuxserver/airsonic-advanced:11.0.0@sha256:44b5e281f064650033201feef1ee858e95067f6624b8de0b03341e994bdccc7c
     restart: on-failure
@@ -12,5 +16,3 @@ services:
       - ${APP_DATA_DIR}/data/music:/music
       - ${APP_DATA_DIR}/data/podcasts:/podcasts
       - ${APP_DATA_DIR}/data/media:/media
-    ports:
-      - 4041:4040
