--- a/budge/docker-compose.yml
+++ b/budge/docker-compose.yml
@@ -1,6 +1,10 @@
-version: "2.1"
+version: "3.7"
 
 services:
+  app_proxy:
+    environment:
+      APP_HOST: budge_app_proxy
+      APP_PORT: 80
   server:
     image: linuxserver/budge:0.0.9@sha256:8843e7fb8b30982941ca5d52dd1c171f89e14dbbed940d6d505eb6f052c933a4
     restart: on-failure
@@ -9,5 +13,3 @@ services:
       - PGID=1000
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
-    ports:
-      - 8332:80
