fix tagline, add metadata, use port 8338

--- a/budge/umbrel-app.yml
+++ b/budge/umbrel-app.yml
@@ -3,7 +3,7 @@ id: budge
 category: Finance
 name: BudgE
 version: "0.0.9"
-tagline: 'budgeting with envelopes' personal finance app.
+tagline: Budgeting with envelopes personal finance app.
 description: >-
   BudgE (pronounced "budgie", like the bird) is an open source "budgeting with envelopes" personal finance app, taking inspiration from other tools such as Aspire Budgeting, budgetzero, and Buckets.
 developer: alex-phillips
@@ -11,7 +11,7 @@ website: https://github.com/linuxserver/budge
 dependencies: []
 repo: https://github.com/linuxserver/budge
 support: https://github.com/linuxserver/budge
-port: 8332
+port: 8338
 gallery:
   - 1.jpg
   - 2.jpg
@@ -21,4 +21,4 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/222
