fix app version

--- a/airsonic-advanced/docker-compose.yml
+++ b/airsonic-advanced/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_HOST: airsonic_adv_app_proxy
       APP_PORT: 4040
   server:
-    image: linuxserver/airsonic-advanced:11.0.0@sha256:44b5e281f064650033201feef1ee858e95067f6624b8de0b03341e994bdccc7c
+    image: linuxserver/airsonic-advanced:latest
     restart: on-failure
     environment:
       - PUID=1000
