update app proxy

--- a/budge/docker-compose.yml
+++ b/budge/docker-compose.yml
@@ -3,9 +3,11 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: budge_app_proxy
+      APP_HOST: budge
       APP_PORT: 80
+
   server:
+    container_name: budge
     image: linuxserver/budge:0.0.9@sha256:8843e7fb8b30982941ca5d52dd1c171f89e14dbbed940d6d505eb6f052c933a4
     restart: on-failure
     volumes:
