--- a/mylar3/docker-compose.yml
+++ b/mylar3/docker-compose.yml
@@ -1,10 +1,6 @@
 version: "3.7"
 
 services:
-  app_proxy:
-    environment:
-      APP_HOST: mylar_server_1
-      APP_PORT: 8090
   server:
     image: linuxserver/mylar3:0.6.9@sha256:d07a8e6311fa24770c59c4f4690857b833ba2e9c087ec70b3c6684ea14e774ca
     restart: on-failure
@@ -12,3 +8,5 @@ services:
       - ${APP_DATA_DIR}/data/config:/config
       - ${APP_DATA_DIR}/data/comics:/comics
       - ${APP_DATA_DIR}/data/downloads:/downloads
+    ports:
+      - 8880:8090
