--- a/nginx-proxy-manager/docker-compose.yml
+++ b/nginx-proxy-manager/docker-compose.yml
@@ -1,11 +1,14 @@
 version: "3.7"
 
 services:
+
   app_proxy:
     environment:
-      APP_HOST: nginx_proxy_manager_app_proxy
+      APP_HOST: nginx-proxy-manager
       APP_PORT: 81
+
   server:
+    container_name: nginx-proxy-manager
     image: jc21/nginx-proxy-manager:latest
     restart: on-failure
     volumes:
