update app desc., add image digest

--- a/firefox/umbrel-app.yml
+++ b/firefox/umbrel-app.yml
@@ -2,18 +2,39 @@ manifestVersion: 1
 id: firefox
 category: Browser
 name: Firefox Web Browser
-version: "2.22.4"
-tagline: Browse and manage the files you download on your Umbrel
+version: "101.0.1"
+tagline: Firefox is a free and open-source web browser
 description: >-
-  File Browser lets you upload, delete, preview, rename and edit your folders and files.
+  Get the browser that protects what is important.
 
 
-  Easily manage files in the Umbrel's storage folder where your downloads from apps like Transmission, Sonarr, Radarr, and Lidarr are currently held.
-developer: File Browser
-website: https://filebrowser.org/
+  No shady privacy policies or back doors for advertisers. Just a lightning fast browser that does not sell you out.
+
+
+  How Firefox compares to other browsers
+
+
+  Get all the speed and tools with none of the invasions of privacy. Firefox Browser collects so little data about you, we do not even require your email address to download. That is because unlike other browsers, we have no financial stake in following you around the web.
+
+
+  Firefox is for everyone
+
+
+  Available in over 90 languages, and compatible with Windows, Mac and Linux machines, Firefox works no matter what you are using or where you are. Make sure your operating system is up to date for the best experience.
+
+
+  Put Firefox on all your devices
+
+
+  Take your privacy with you everywhere. Firefox Browsers for iOS and Android have the same strong privacy settings to block trackers from following you around the web, no matter where you are.
+
+
+
+developer: Mozilla Foundation
+website: https://www.mozilla.org/en-US/firefox/
 dependencies: []
-repo: https://github.com/filebrowser/filebrowser
-support: https://github.com/filebrowser/filebrowser/issues
+repo: https://support.mozilla.org/en-US/contribute
+support: https://support.mozilla.org/en-US/products/firefox
 port: 3333
 gallery:
   - 1.jpg
