--- a/firefox/docker-compose.yml
+++ b/firefox/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   server:
-    image: linuxserver/firefox:101.0.1
+    image: linuxserver/firefox:101.0.1@sha256:04124c6961be68a869f95cfccd509d3a63be157a59a5407f9eaa39dbf19b34a6
     restart: on-failure
     environment:
       - PUID=1000
