--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - walletserver
   
   walletserver:
-    image: bitcoinscala/bitcoin-s-server:1.9.6@sha256:4007311e6b2a7853e59b561c9961d8c9bef29cc0e026ef8b45c41b95d09667ae
+    image: bitcoinscala/bitcoin-s-server:1.9.6-43-f381941b-SNAPSHOT
     entrypoint: ["/opt/docker/bin/bitcoin-s-server", "--datadir", "/bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]
     user: "1000:1000"
     restart: on-failure
