--- a/lnplus/umbrel-app.yml
+++ b/lnplus/umbrel-app.yml
@@ -28,5 +28,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: Alan Plus
+submitter: Lightning Network+
 submission: https://github.com/getumbrel/umbrel-apps/pull/202
