Resolve nolooking description and submitter feedback

--- a/nolooking/umbrel-app.yml
+++ b/nolooking/umbrel-app.yml
@@ -3,13 +3,13 @@ id: nolooking
 category: Lightning Node Management 
 name: nolooking
 version: "0.1.0"
-tagline: Use PayJoin to open channels for your lightning node.
+tagline: Use PayJoin to open channels for your lightning node
 description: >-
   Nolooking leverages Pay-to-Endpoint (payjoin) to negotiate a channel open for your lightning node, initiated by any BIP78 supporting wallet.
 
-  You can open multiple lightning nodes in a single payment, improving privacy, saving on transaction fees and wait time.
+  You can open multiple lightning channels in a single payment, improving privacy, saving on transaction fees and wait time.
 
-  Read the article about [Lightning Powered PayJoin](https://chaincase.app/words/lightning-payjoin?ref=github) to hear all the benefits!
+  Read the article about Lightning Powered PayJoin: https://chaincase.app/words/lightning-payjoin to hear all the benefits!
 
   Please note that nolooking is still in early development. By using nolooking, you hold all responsibility for any loss of funds or other grievances which may arise. We are rapidly iterating on this product, feedback and contributions are strongly appreciated.
 releaseNotes: >-
@@ -28,5 +28,5 @@ gallery:
 path: "/pj"
 defaultUsername: ""
 defaultPassword: ""
-submitter: Nick Farrow
+submitter: nolooking
 submission: https://github.com/getumbrel/umbrel-apps/pull/229
