--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -2,19 +2,21 @@ manifestVersion: 1
 id: rotki
 category: Finance
 name: Rotki
-version: "1.25.3"
+version: "1.26.1"
 tagline: A portfolio tracking, analytics, accounting and tax reporting application that protects your privacy
 description: >-
   rotki is an open source portfolio tracking, analytics, accounting and tax reporting tool that protects your privacy. 
   The mission of rotki is to bring transparency into the crypto and financial sectors through the use of open source. 
   Most importantly unlike virtually every other competing service which consists of closed source SaaS onto which you are forced to hand over all your financial data, with rotki your data is stored encrypted locally in your computer. 
   It enables you to take ownership of your financial data!
+  
+  ⚠️IMPORTANT⚠️ Rotki is meant to be accessed locally. Hosting it on a publicly accessible machine should be avoided at all cost, unless you know what you're doing!
 developer: Rotki
 website: "https://rotki.com/"
 dependencies: []
 repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
-port: 9891
+port: 8084
 gallery:
   - 1.jpg
   - 2.jpg
