Added submission link

--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -26,4 +26,4 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 submitter: Xosten
-submission: <update>
+submission: "https://github.com/getumbrel/umbrel-apps/pull/255"
