Remove exports.sh and simplify docker-compose.yml

--- a/rotki/docker-compose.yml
+++ b/rotki/docker-compose.yml
@@ -1,22 +1,18 @@
 version: '3.7'
+
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_ROTKI_IP
+      APP_HOST: rotki_web_1
       APP_PORT: 80
-      PROXY_AUTH_ADD: "false"
 
-  rotki-web:
-    container_name: rotki
+  web:
+    image: rotki/rotki:v1.26.1@sha256:14ac75dc4acdedd762bc13e6d62c9a46d3ef9f9e395fb24fc4086b5cb2eca733
     stop_grace_period: 1m
     environment:
       - TZ=Europe/London
       - PUID=1000
       - PGID=1000
-    image: rotki/rotki:v1.26.1@sha256:14ac75dc4acdedd762bc13e6d62c9a46d3ef9f9e395fb24fc4086b5cb2eca733
     volumes:
       - ${APP_DATA_DIR}/data/data:/data
       - ${APP_DATA_DIR}/data/logs:/logs
-    networks:
-      default:
-        ipv4_address: $APP_ROTKI_IP
