--- a/rotki/docker-compose.yml
+++ b/rotki/docker-compose.yml
@@ -8,8 +8,8 @@ services:
 
   web:
     image: rotki/rotki:v1.26.1@sha256:14ac75dc4acdedd762bc13e6d62c9a46d3ef9f9e395fb24fc4086b5cb2eca733
+    restart: on-failure
     stop_grace_period: 1m
-    user: "1000:1000"
     init: true
     volumes:
       - ${APP_DATA_DIR}/data/data:/data
