Minor tweaks to app manifest

--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: rotki
 category: Finance
-name: Rotki
+name: rotki
 version: "1.26.1"
 tagline: A portfolio tracking, analytics, accounting and tax reporting application that protects your privacy
 description: >-
@@ -19,7 +19,7 @@ description: >-
   
   ⚠️ IMPORTANT ⚠️ Rotki is meant to be accessed locally. Hosting it on a publicly accessible machine should be avoided at all cost, unless you know what you're doing!
 developer: Rotki
-website: "https://rotki.com/"
+website: https://rotki.com
 dependencies: []
 repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
@@ -33,4 +33,4 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 submitter: Xosten
-submission: "https://github.com/getumbrel/umbrel-apps/pull/255"
+submission: https://github.com/getumbrel/umbrel-apps/pull/255
