Fix formatting of description

--- a/kdenlive/umbrel-app.yml
+++ b/kdenlive/umbrel-app.yml
@@ -3,18 +3,16 @@ id: kdenlive
 category: Media
 name: KdenLive
 version: "421.12.3"
-tagline: Free and open source video editor.
+tagline: Free and open source video editor
 description: >-
+  Kdenlive is an open source video editor. The project was started around 2003 and is built on Qt and the KDE Frameworks libraries.
 
-
-  Kdenlive is an open source video editor. The project was started around 2003.
-
-  Kdenlive is built on Qt and the KDE Frameworks libraries.
 
   Most of the video processing is done by the MLT Framework, which relies on many other open source projects like FFmpeg, frei0r, movit, ladspa, sox, etc…
 
 
   Our software was designed to answer most needs, from basic video editing to professional work.
+
 
   Kdenlive is developed by a small team and new contributors are welcome.
 
@@ -23,7 +21,6 @@ description: >-
 
 
   Use any audio / video format - Being based on the powerful FFmpeg libraries, Kdenlive can use almost any audio and video formats directly without the need to convert or re-encode your clips.
-
 
 
   Configurable interface and shortcuts - You can arrange and save your custom interface layouts to fit your workflow.Keyboard shortcuts can also be configured to match your preferences.
