--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -8,19 +8,17 @@ services:
       PROXY_AUTH_ADD: "false"
 
   immich-server:
-    container_name: immich-server
-    hostname: immich-server
     image: "altran1502/immich-server:${APP_IMMICH_VERSION}"
     entrypoint: ["/bin/sh", "./start-server.sh"]
     volumes:
       - ${APP_DATA_DIR}/upload:/usr/src/app/upload
     environment:
       NODE_ENV: production
-      DB_HOSTNAME: immich-postgres
+      DB_HOSTNAME: immich_postgres_1
       DB_USERNAME: ${APP_IMMICH_DB_USERNAME}
       DB_PASSWORD: ${APP_IMMICH_DB_PASSWORD}
       DB_DATABASE_NAME: ${APP_IMMICH_DB_DATABASE_NAME}
-      REDIS_HOSTNAME: immich-redis
+      REDIS_HOSTNAME: immich_redis_1
       LOG_LEVEL: ${APP_IMMICH_LOG_LEVEL}
       JWT_SECRET: ${APP_SEED}
       DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
@@ -32,19 +30,17 @@ services:
     restart: always
 
   immich-microservices:
-    container_name: immich-microservices
-    hostname: immich-microservices
     image: "altran1502/immich-server:${APP_IMMICH_VERSION}"
     entrypoint: ["/bin/sh", "./start-microservices.sh"]
     volumes:
       - ${APP_DATA_DIR}/upload:/usr/src/app/upload
     environment:
       NODE_ENV: production
-      DB_HOSTNAME: immich-postgres
+      DB_HOSTNAME: immich_postgres_1
       DB_USERNAME: ${APP_IMMICH_DB_USERNAME}
       DB_PASSWORD: ${APP_IMMICH_DB_PASSWORD}
       DB_DATABASE_NAME: ${APP_IMMICH_DB_DATABASE_NAME}
-      REDIS_HOSTNAME: immich-redis
+      REDIS_HOSTNAME: immich_redis_1
       LOG_LEVEL: ${APP_IMMICH_LOG_LEVEL}
       JWT_SECRET: ${APP_SEED}
       DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
@@ -56,19 +52,17 @@ services:
     restart: always
 
   immich-machine-learning:
-    container_name: immich-machine-learning
-    hostname: immich-machine-learning
     image: "altran1502/immich-machine-learning:${APP_IMMICH_VERSION}"
     entrypoint: ["/bin/sh", "./entrypoint.sh"]
     volumes:
       - ${APP_DATA_DIR}/upload:/usr/src/app/upload
     environment:
       NODE_ENV: production
-      DB_HOSTNAME: immich-postgres
+      DB_HOSTNAME: immich_postgres_1
       DB_USERNAME: ${APP_IMMICH_DB_USERNAME}
       DB_PASSWORD: ${APP_IMMICH_DB_PASSWORD}
       DB_DATABASE_NAME: ${APP_IMMICH_DB_DATABASE_NAME}
-      REDIS_HOSTNAME: immich-redis
+      REDIS_HOSTNAME: immich_redis_1
       LOG_LEVEL: ${APP_IMMICH_LOG_LEVEL}
       JWT_SECRET: ${APP_SEED}
       DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
@@ -79,16 +73,14 @@ services:
     restart: always
 
   immich-web:
-    container_name: immich-web
-    hostname: immich-web
     image: "altran1502/immich-web:${APP_IMMICH_VERSION}"
     entrypoint: ["/bin/sh", "./entrypoint.sh"]
     environment:
-      DB_HOSTNAME: immich-postgres
+      DB_HOSTNAME: immich_postgres_1
       DB_USERNAME: ${APP_IMMICH_DB_USERNAME}
       DB_PASSWORD: ${APP_IMMICH_DB_PASSWORD}
       DB_DATABASE_NAME: ${APP_IMMICH_DB_DATABASE_NAME}
-      REDIS_HOSTNAME: immich-redis
+      REDIS_HOSTNAME: immich_redis_1
       LOG_LEVEL: ${APP_IMMICH_LOG_LEVEL}
       JWT_SECRET: ${APP_SEED}
       DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
@@ -97,14 +89,10 @@ services:
     restart: always
 
   redis:
-    container_name: immich-redis
-    hostname: immich-redis
     image: redis:6.2
     restart: always
 
   postgres:
-    container_name: immich-postgres
-    hostname: immich-postgres
     image: postgres:14
     user: "1000:1000"
     environment:
@@ -117,8 +105,6 @@ services:
     restart: always
 
   immich-proxy:
-    container_name: immich-proxy
-    hostname: immich-proxy
     image: altran1502/immich-proxy:release
     # expose:
     #   - 8080
