--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     depends_on:
       - redis
       - postgres
-    restart: always
+    restart: on-failure
 
   immich-microservices:
     image: "altran1502/immich-server:${APP_IMMICH_VERSION}"
@@ -49,7 +49,7 @@ services:
     depends_on:
       - redis
       - postgres
-    restart: always
+    restart: on-failure
 
   immich-machine-learning:
     image: "altran1502/immich-machine-learning:${APP_IMMICH_VERSION}"
@@ -70,7 +70,7 @@ services:
       PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
     depends_on:
       - postgres
-    restart: always
+    restart: on-failure
 
   immich-web:
     image: "altran1502/immich-web:${APP_IMMICH_VERSION}"
@@ -86,11 +86,11 @@ services:
       DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
       REVERSE_GEOCODING_PRECISION: ${APP_IMMICH_REVERSE_GEOCODING_PRECISION}
       PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
-    restart: always
+    restart: on-failure
 
   redis:
     image: redis:6.2
-    restart: always
+    restart: on-failure
 
   postgres:
     image: postgres:14
@@ -102,7 +102,7 @@ services:
       PG_DATA: /var/lib/postgresql/data
     volumes:
       - ${APP_DATA_DIR}/pgdata:/var/lib/postgresql/data
-    restart: always
+    restart: on-failure
 
   immich-proxy:
     image: altran1502/immich-proxy:release
@@ -112,4 +112,4 @@ services:
       driver: none
     depends_on:
       - immich-server
-    restart: always
+    restart: on-failure
