updated immich version and added digests for all images

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: immich
 category: Files
 name: Immich
-version: "1.33.0_52-dev"
+version: "v1.34.0_53-dev"
 tagline: High performance self-hosted photo and video backup solution.
 description: >-
   An open source, high performance self-hosted backup solution for videos and photos on your mobile phone
