--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   immich-server:
-    image: "altran1502/immich-server:${APP_IMMICH_VERSION}"
+    image: altran1502/immich-server:v1.34.0_53-dev@sha256:959a1770049335afa4e2870a47854646cbbe4047699e1ad7a0ae73327719bc12
     entrypoint: ["/bin/sh", "./start-server.sh"]
     volumes:
       - ${APP_DATA_DIR}/upload:/usr/src/app/upload
@@ -30,7 +30,7 @@ services:
     restart: on-failure
 
   immich-microservices:
-    image: "altran1502/immich-server:${APP_IMMICH_VERSION}"
+    image: altran1502/immich-server:v1.34.0_53-dev@sha256:959a1770049335afa4e2870a47854646cbbe4047699e1ad7a0ae73327719bc12
     entrypoint: ["/bin/sh", "./start-microservices.sh"]
     volumes:
       - ${APP_DATA_DIR}/upload:/usr/src/app/upload
@@ -52,7 +52,7 @@ services:
     restart: on-failure
 
   immich-machine-learning:
-    image: "altran1502/immich-machine-learning:${APP_IMMICH_VERSION}"
+    image: altran1502/immich-machine-learning:v1.34.0_53-dev@sha256:944984e95540c0453742289170ae3759c8f6ac80d3d34adaa6c7f49c27413974
     entrypoint: ["/bin/sh", "./entrypoint.sh"]
     volumes:
       - ${APP_DATA_DIR}/upload:/usr/src/app/upload
@@ -73,7 +73,7 @@ services:
     restart: on-failure
 
   immich-web:
-    image: "altran1502/immich-web:${APP_IMMICH_VERSION}"
+    image: altran1502/immich-web:v1.34.0_53-dev@sha256:4bb4184a4b9723651b06fd2b8802c40d83e75a46e963a73e36f53e88d088e5fc
     entrypoint: ["/bin/sh", "./entrypoint.sh"]
     environment:
       DB_HOSTNAME: immich_postgres_1
@@ -89,11 +89,11 @@ services:
     restart: on-failure
 
   redis:
-    image: redis:6.2
+    image: redis:6.2-bullseye@sha256:ffd3d04c8f7832ccdda89616ebaf3cb38414b645ebbf76dbef1fc9c36a72a2d1
     restart: on-failure
 
   postgres:
-    image: postgres:14
+    image: postgres:14-bullseye@sha256:135c62a8134dcef829a1e4f5568bfae44bcfa2c75659ff948f43c71964366aa4
     user: "1000:1000"
     environment:
       POSTGRES_USER: ${APP_IMMICH_DB_USERNAME}
@@ -105,7 +105,7 @@ services:
     restart: on-failure
 
   immich-proxy:
-    image: altran1502/immich-proxy:release
+    image: altran1502/immich-proxy:1.34.0_53-dev@sha256:79d9fe3e96e04a83c153bd26fd2f70e901a7ce7726372f0e4beddaf1175f75f6
     depends_on:
       - immich-server
     restart: on-failure
