added icon for the app store

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -13,6 +13,7 @@ dependencies: []
 repo: https://github.com/immich-app/immich
 support: https://github.com/immich-app/immich/discussions
 port: 2283
+icon: https://immich.app/img/color-logo.png
 gallery:
   - 1.jpg
   - 2.jpg
