--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -90,7 +90,10 @@ services:
 
   redis:
     image: redis:6.2-bullseye@sha256:ffd3d04c8f7832ccdda89616ebaf3cb38414b645ebbf76dbef1fc9c36a72a2d1
+    user: "1000:1000"
     restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/data/redis:/data
 
   postgres:
     image: postgres:14-bullseye@sha256:135c62a8134dcef829a1e4f5568bfae44bcfa2c75659ff948f43c71964366aa4
