added submitter / submission

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -21,3 +21,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: levma
+submission: https://github.com/getumbrel/umbrel-apps/pull/239
