adjusted hostname to reflect the automatically generated one from docker dns

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: immich-proxy
+      APP_HOST: immich_immich-proxy_1
       APP_PORT: 8080
       PROXY_AUTH_ADD: "false"
 
