Update docker-compose.ym to 221105-bullseye

--- a/photoprism/docker-compose.yml
+++ b/photoprism/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       # More details here: https://docs.photoprism.app/user-guide/sync/webdav/#server-url
       PROXY_AUTH_WHITELIST: "/originals/*,/import/*"
   web:
-    image: photoprism/photoprism:20220121@sha256:8dd9e8e5290c8bf648d0e91ea8ef81038ffc8800ebf6322417682a0342e04065
+    image: photoprism/photoprism:221105-bullseye@sha256:52f2cfb9f46aec44dd2dec87c78ca121cc6fd174510db1ac371072c527f86558
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: "1m"
