--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     ports:
       # Service auto-discovery
       - 7359:7359/udp
+      - 1900:1900/udp
     networks:
       default:
         ipv4_address: $APP_JELLYFIN_IP
