--- a/photoprism/docker-compose.yml
+++ b/photoprism/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       # More details here: https://docs.photoprism.app/user-guide/sync/webdav/#server-url
       PROXY_AUTH_WHITELIST: "/originals/*,/import/*"
   web:
-    image: photoprism/photoprism:20210925@sha256:238e6955804d82097d08f0e4318835721f46bd844f9065a38aa7d112ab72906e
+    image: photoprism/photoprism:221105-bullseye@sha256:52f2cfb9f46aec44dd2dec87c78ca121cc6fd174510db1ac371072c527f86558
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: "1m"
