Add proxy auth whitelist for nolooking

--- a/nolooking/docker-compose.yml
+++ b/nolooking/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: nolooking_server_1
       APP_PORT: 4444
+      PROXY_AUTH_WHITELIST: "/pj"
   
   server:
     image: satsale/nolooking:0.1.2@sha256:0e26450f6be181d2392bb51b7ecc69446d782d778622e5634c85f54c62a2fdd2
