--- a/prowlarr/docker-compose.yml
+++ b/prowlarr/docker-compose.yml
@@ -21,12 +21,19 @@ services:
         ipv4_address: $APP_PROWLARR_IP
 
   mac:
-    image: getumbrel/media-app-configurator:v1.0.0@sha256:e3d8b18e0186f76dd3f3d4acacc9101b4abbf302d8f2afbb47cdd3879b1a1008
+    image: getumbrel/media-app-configurator:v1.1.0@sha256:987f6a02367adf86ab1cff38e1e2d43d85e17a6fc130aae4af196fb571dff06a
     user: "1000:1000"
     restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
     environment:
-      DOWNLOAD_CLIENT_API_URL: "http://${APP_PROWLARR_IP}:${APP_PROWLARR_PORT}/api/v1/downloadclient"
+      APP_ID: "prowlarr"
+      APP_URL: "http://prowlarr_server_1:9696"
       TRANSMISSION_HOST: "transmission_server_1"
       TRANSMISSION_PORT: 9091
+      RADARR_URL: "http://radarr_server_1:7878"
+      RADARR_CONFIG_XML: "${APP_PROWLARR_RADARR_CONFIG_XML}"
+      LIDARR_URL: "http://lidarr_server_1:8686"
+      LIDARR_CONFIG_XML: "${APP_PROWLARR_LIDARR_CONFIG_XML}"
+      SONARR_URL: "http://sonarr_server_1:8989"
+      SONARR_CONFIG_XML: "${APP_PROWLARR_SONARR_CONFIG_XML}"
