--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,7 +22,7 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  - This is an emergency hot fix release to fix a bug that can cause lnd nodes to be unable to parse certain transactions that have a very large number of witness inputs.
+  - Enable RPC middleware in LND
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
