Update Lightning: Enable RPC middleware in LND (#249)
Co-authored-by: Steven Briscoe <me@stevenbriscoe.com>

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: lightning
 category: Finance
 name: Lightning Node
-version: "0.15.4-beta"
+version: "0.15.4-beta-build-2"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -22,7 +22,7 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  - This is an emergency hot fix release to fix a bug that can cause lnd nodes to be unable to parse certain transactions that have a very large number of witness inputs.
+  - Enable RPC middleware in LND
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
