--- a/mylar3/docker-compose.yml
+++ b/mylar3/docker-compose.yml
@@ -1,6 +1,11 @@
 version: "3.7"
 
 services:
+  app_proxy:
+    environment:
+      APP_HOST: mylar3_server_1
+      APP_PORT: 8090
+
   server:
     image: linuxserver/mylar3:0.6.9@sha256:5925054dfed093cfe9617077cb8f8d995354485d0a8d7222d01f739ef0e2dda1
     restart: on-failure
@@ -8,5 +13,3 @@ services:
       - ${APP_DATA_DIR}/data/config:/config
       - ${APP_DATA_DIR}/data/comics:/comics
       - ${APP_DATA_DIR}/data/downloads:/downloads
-    ports:
-      - 8880:8090
