Patch up description

--- a/mylar3/umbrel-app.yml
+++ b/mylar3/umbrel-app.yml
@@ -2,24 +2,23 @@ manifestVersion: 1
 id: mylar3
 category: Media
 name: MyLar3
-version: "1"
+version: "0.6.9"
 tagline: An automated Comic Book (cbr/cbz) downloader program for use with NZB and torrents.
 description: >-
-
   Mylar allows you to create a watchlist of series that it monitors for various things (new issues, updated information, etc). It will grab, sort, and rename downloaded issues. It will also allow you to monitor weekly pull-lists for items belonging to said watchlisted series to download, as well as being able to monitor and maintain story-arcs.
 
+  
   It's running - now what?
 
 
-  The 2 most important things you need prior to doing anything -
+  The 2 most important things you need prior to doing anything:
 
-  add your ComicVine API Key
+  - add your ComicVine API Key
+
+  - set your Comic Location path
 
 
-  set your Comic Location path
-
-
-  Both are set via the gears icon (configuration settings) located in the upper right of the page -
+  Both are set via the gears icon (configuration settings) located in the upper right of the page
 
 
   ComicVine API Key
@@ -30,10 +29,11 @@ description: >-
 
   Comic Location path
 
+
   Just beneath that is the Comic Location field. This is the location where you want Mylar to start storing comics (ie. the root) - when adding series, post-processing issues, metatagging, renaming, etc this location is where Mylar will both look and send files (unless changed). Directories will be created beneath the path specified, in the format that is specified (this is called Folder Format and is on the Advanced Settings tab of the Configuration).
 
 
-  Helpful hints -
+  Helpful hints
 
 
   Ensure Comic Location is specified in the configuration (Configuration --> Web Interface --> Comic Location)
