Update Jam to v0.1.3

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: jam
 category: Finance
 name: Jam
-version: "0.1.2"
+version: "0.1.3"
 tagline: Your sats. Your privacy. Your profit.
 description: >-
   Jam is a user-interface for JoinMarket with focus on
@@ -13,7 +13,11 @@ description: >-
 
   The app provides sensible defaults and is easy to use for beginners while still providing the features advanced users expect.
 releaseNotes: >-
-  - Display error message if backend is unreachable
+  - Quickly review/adapt fee settings before sweeping
+
+  - Improved readability of Orderbook
+
+  - Wait for bitcoind to accept RPC calls
 developer: JoinMarket WebUI Organisation
 website: https://jamapp.org
 dependencies:
