--- a/firefox/umbrel-app.yml
+++ b/firefox/umbrel-app.yml
@@ -11,19 +11,17 @@ description: >-
   No shady privacy policies or back doors for advertisers. Just a lightning fast browser that does not sell you out.
 
 
-  How Firefox compares to other browsers
-
 
   Get all the speed and tools with none of the invasions of privacy. Firefox Browser collects so little data about you, we do not even require your email address to download. That is because unlike other browsers, we have no financial stake in following you around the web.
 
 
-  Firefox is for everyone
+  Firefox is for everyone:
 
 
   Available in over 90 languages, and compatible with Windows, Mac and Linux machines, Firefox works no matter what you are using or where you are. Make sure your operating system is up to date for the best experience.
 
 
-  Put Firefox on all your devices
+  Put Firefox on all your devices:
 
 
   Take your privacy with you everywhere. Firefox Browsers for iOS and Android have the same strong privacy settings to block trackers from following you around the web, no matter where you are.
