--- a/firefox/umbrel-app.yml
+++ b/firefox/umbrel-app.yml
@@ -42,4 +42,4 @@ path: ""
 deterministicPassword: false
 torOnly: false
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/253
