--- a/synclounge/docker-compose.yml
+++ b/synclounge/docker-compose.yml
@@ -1,11 +1,17 @@
 version: "3.7"
 
 services:
+
+  app_proxy:
+    environment:
+      APP_HOST: synclounge
+      APP_PORT: 8088
+
   server:
+    container_name: synclounge
     image: linuxserver/synclounge:5.2.4@sha256:ef0401d7cf03b3f2fd28365dd6c4e2aa6ab0b43770f4e3a928288a9a9015bfed
     restart: on-failure
-    ports:
-      - 8188:8088
+
 
 
 
