--- a/synclounge/umbrel-app.yml
+++ b/synclounge/umbrel-app.yml
@@ -14,14 +14,14 @@ description: >-
   The host has complete control over a room. Commands they send to their client will be sent through to other people in the room (Play, Pause, Seek etc). If the host starts playing something different, SyncLounge will search all of your available Plex Media Servers for an equiavalent copy, even if it is not from the same Plex Media Server as the Host.
 
 
-  Features
+  Features :
 
 
   Syncing between Plex Clients over the Internet
-  
-  
+
+
   SyncLounge Player
-  
+
   
   Plays content directly within SyncLounge.
   
@@ -32,22 +32,22 @@ description: >-
   Settings to tune SyncLounge to your environment
   
   
-  Client Polling Interval - Sets how frequently SyncLounge will poll the client for new information.
+  Client Polling Interval : Sets how frequently SyncLounge will poll the client for new information.
+
+
+  Sync Flexability : Sets the acceptable distance away from the host in milliseconds.
   
   
-  Sync Flexability - Sets the acceptable distance away from the host in milliseconds.
+  Sync method :
+
+
+  Clean seek : Seeks straight to where the host is.
+
+
+  Skip ahead : Seeks 10 seconds ahead, pauses and then resumes 10 seconds later.
   
   
-  Sync method -
-  
-  
-  Clean seek - Seeks straight to where the host is.
-  
-  
-  Skip ahead - Seeks 10 seconds ahead, pauses and then resumes 10 seconds later.
-  
-  
-  Plex Media Server blocking - allows you to restrict the servers SyncLounge searches for content.
+  Plex Media Server blocking : allows you to restrict the servers SyncLounge searches for content.
   
   
   Autoplay content
@@ -56,7 +56,7 @@ description: >-
   SyncLounge will automatically search all of your available Plex Media Servers for content that is similar to the Host.
   
   
-  Plex Media Server Browsing - find, search and fling content to Plex Clients from within SyncLounge.
+  Plex Media Server Browsing : find, search and fling content to Plex Clients from within SyncLounge.
   
   
   Metadata fetching from Plex Media Server
@@ -87,4 +87,4 @@ gallery:
 path: ""
 defaultPassword: ""
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/254
