add image digests

--- a/ghost/docker-compose.yml
+++ b/ghost/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 2368
 
   server:
-    image: ghost:5.22.9
+    image: ghost:5.22.9@sha256:2317f68dfe9b206adbb1c7f332745d870c56f1de1d756b72bf6da205d43c37e0
     restart: on-failure
     environment:
       database__client: mysql
