update app desc.

--- a/ghost/umbrel-app.yml
+++ b/ghost/umbrel-app.yml
@@ -3,8 +3,23 @@ id: ghost
 category: Development
 name: Ghost
 version: "5.22.9"
-tagline: Be part of the creator economy.
+tagline: Turn your audience into a business
 description: >-
+  Ghost is a powerful app for new-media creators to publish, share, and grow a business around their content. It comes with modern tools to build a website, publish content, send newsletters & offer paid subscriptions to members.
+
+
+  Dont settle for another basic profile that looks just like everyone else. Make it yours.
+
+
+  Launch your website with a selection of beautiful free themes and tweak the design settings to perfectly match your brand and style.
+
+
+  Go even further with hundreds of custom themes in our marketplace, or build your own completely custom design from scratch.
+
+
+  An editor built from the ground-up for professionals. Calm by design, with advanced workflows by default. No more suffering through clumsy toolbars or drag & oops. Immerse yourself in the story with an interface that's invisible until you need it, and powerful when you do.
+
+
   Ghost is an all-in-one platform for creators to run their own website, collect user signups, publish private content, collect payments, and send email newsletters.
 
 
@@ -21,7 +36,7 @@ description: >-
 
 
 
-developer: Ghost Team
+developer: Team@Ghost
 website: https://ghost.org/
 dependencies: []
 repo: https://github.com/tryghost/ghost/
