update app desc.

--- a/solid-invoice/umbrel-app.yml
+++ b/solid-invoice/umbrel-app.yml
@@ -9,6 +9,31 @@ description: >-
   It's a feature rich elegant online application, available as a cloud solution to ensure that you can always get paid on time.
 
 
+  Features :
+  
+  
+  Clients and Contacts management
+  
+  
+  Create and manage Quotes
+  
+  
+  Create and manage Invoices
+  
+  
+  Accept payments online
+  
+  
+  Tax and discount handling
+  
+  
+  RESTful API
+  
+  
+  Receive Notifications either via text message, email or through HipChat
+  
+  
+  More to come
 
 developer: Pierre du Plessis
 website: https://solidinvoice.co/
