update app desc.

--- a/quant-ux/umbrel-app.yml
+++ b/quant-ux/umbrel-app.yml
@@ -7,6 +7,46 @@ tagline: OpenSource Figma Alternative
 description: >-
   Quant UX is a research, usability and prototyping tool to quickly test your designs and get data driven insights.
 
+  Prototypes that feel real.
+
+
+  All prototypes are fully interactive. Use input widgets, animations and data to make your prototype feel like a real app.
+
+
+  Visual Designer:
+
+
+  Use the powerful canvas to build amazing prototypes. Simply create screens, add interactive components and link the screens.
+
+
+  Design Tokens:
+
+
+  Design tokens make it easy to define common styles that grow with your prototypes.
+
+
+  Design Systems:
+
+
+  Build a scallable design system by using Components, Design Tokens and Master Screens and share them it multiple prototypes.
+
+
+  Animations:
+
+
+  Use the Animation Composer to create stunning animations and make your prototypes feel more realistic.
+
+
+  Rich Component Palette:
+
+
+  The large palette of fully functional components give you a head start! You can start right away to design WireFrame, IOS, Android, OpenUI5 or Lightning prototypes.
+
+
+  A / B Testing:
+
+
+  The A / B test operator allows you to compare different design in one propotype. Choose the better version and create an improved version and benchmark it again.
 
 developer: Klaus Schaefers
 website: https://www.quant-ux.com/#/
