update app desc.

--- a/wikijs/umbrel-app.yml
+++ b/wikijs/umbrel-app.yml
@@ -5,7 +5,20 @@ name: WikiJS
 version: "2.5.290"
 tagline: Make documentation a joy to write
 description: >-
-  WikiJS is open source.
+  The most powerful and extensible open source Wiki software.
+
+
+  Not all teams need the same set of features. That's why Wiki.js offers a wide range of modules that can be turned on/off on demand.
+
+
+  It's not just about being free, it also means anyone can contribute new features and help squash bugs. Wiki.js is proudly licensed under AGPLv3.
+
+
+  Connect your wiki with an ever-expanding list of external integrations
+  for authentication, logging, rendering, search and storage.
+
+
+  
 
 developer: WikiJS Team
 website: https://js.wiki/
