remove linked images for uploaded ones

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -4,7 +4,6 @@ category: Lightning Node Management
 name: Torq
 version: "v0.10.3"
 tagline: Torq is a capital management tool for routing nodes on the lightning network
-icon: https://raw.githubusercontent.com/lncapital/torq/main/docs/images/umbrel/torq-symbol-umbrel.svg
 description: >-
   Features
   - Channel and Channel group inspection
@@ -23,12 +22,11 @@ repo: https://github.com/lncapital/torq
 support: https://github.com/lncapital/torq/issues/new
 port: 7028
 gallery:
-  - https://github.com/lncapital/torq/raw/main/docs/images/forwards-table.png
-  - https://github.com/lncapital/torq/raw/main/docs/images/forwards-summary.png
-  - https://github.com/lncapital/torq/raw/main/docs/images/Torq-Events.png
-  - https://github.com/lncapital/torq/raw/main/docs/images/Torq-Flow.png
-  - https://github.com/lncapital/torq/raw/main/docs/images/balance-graph.png
-  - https://github.com/lncapital/torq/raw/main/docs/images/payments.png
+  - 1.png
+  - 2.png
+  - 3.png
+  - 4.png
+  - 5.png
 releaseNotes: >-
   Support for arm architecture to run on Raspberry Pi
 path: ""
