--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -5,43 +5,44 @@ name: Trilium Notes
 version: "0.55.1"
 tagline: Build your personal knowledge base with Trilium Notes
 description: >-
-  Notes can be arranged into arbitrarily deep tree. Single note can be placed into multiple places in the tree (see cloning)
+  Features
+
+
+  - Notes can be arranged into arbitrarily deep tree. Single note can be placed into multiple places in the tree (see cloning)
   
-  Rich WYSIWYG note editing including e.g. tables, images and math with markdown autoformat
+  - Rich WYSIWYG note editing including e.g. tables, images and math with markdown autoformat
   
-  Support for editing notes with source code, including syntax highlighting
+  - Support for editing notes with source code, including syntax highlighting
   
-  Fast and easy navigation between notes, full text search and note hoisting
+  - Fast and easy navigation between notes, full text search and note hoisting
   
-  Seamless note versioning
+  - Seamless note versioning
   
-  Note attributes can be used for note organization, querying and advanced scripting
+  - Note attributes can be used for note organization, querying and advanced scripting
   
-  Synchronization with self-hosted sync server
+  - Synchronization with self-hosted sync server (there's a 3rd party service for hosting synchronisation server)
   
-  there's a 3rd party service for hosting synchronisation server
+  - Sharing (publishing) notes to public internet
   
-  Sharing (publishing) notes to public internet
+  - Strong note encryption with per-note granularity
   
-  Strong note encryption with per-note granularity
+  - Sketching diagrams with bult-in Excalidraw (note type "canvas")
   
-  Sketching diagrams with bult-in Excalidraw (note type "canvas")
+  - Relation maps and link maps for visualizing notes and their relations
   
-  Relation maps and link maps for visualizing notes and their relations
+  - Scripting - see Advanced showcases
   
-  Scripting - see Advanced showcases
+  - REST API for automation
   
-  REST API for automation
+  - Scales well in both usability and performance upwards of 100 000 notes
   
-  Scales well in both usability and performance upwards of 100 000 notes
+  - Touch optimized mobile frontend for smartphones and tablets
   
-  Touch optimized mobile frontend for smartphones and tablets
+  - Night theme
   
-  Night theme
+  - Evernote and Markdown import & export
   
-  Evernote and Markdown import & export
-  
-  Web Clipper for easy saving of web content
+  - Web Clipper for easy saving of web content
 developer: ZAdam
 website: https://github.com/zadam/trilium
 dependencies: []
