--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -3,7 +3,7 @@ id: rotki
 category: Finance
 name: rotki
 version: "1.26.1"
-tagline: A portfolio tracking, analytics, accounting and tax reporting application that protects your privacy
+tagline: Portfolio tracking, analytics, accounting and tax reporting
 description: >-
   rotki is an open source portfolio tracking, analytics, accounting and tax reporting tool that protects your privacy. 
   
