--- a/libreoffice/umbrel-app.yml
+++ b/libreoffice/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: libreoffice
-category: Productivity
+category: Files
 name: LibreOffice
 version: "7.2.7"
 tagline: Do more - easier, quicker, smarter
