--- a/sphinx-relay/umbrel-app.yml
+++ b/sphinx-relay/umbrel-app.yml
@@ -32,10 +32,10 @@ defaultPassword: ""
 submitter: Stakwork
 submission: https://github.com/getumbrel/umbrel/pull/341
 releaseNotes: >-
-  - Mentions and notifications
+  - Fix person uuid forwarded in tribes
 
-  - Additions for LSATs and second-brain
+  - Action history
 
-  - Bot DMs
-  
-  - Better bot auth
+  - Tribe leaderboard stuff
+
+  - DB config from env
