Update sphinx-relay to v2.2.12 (#275)
Co-authored-by: Steven Briscoe <me@stevenbriscoe.com>

--- a/sphinx-relay/umbrel-app.yml
+++ b/sphinx-relay/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: sphinx-relay
 category: Social
 name: Sphinx Relay
-version: "2.2.10-hotfix-1"
+version: "2.2.12"
 tagline: Chat and pay over the Lightning Network
 description: >-
   Sphinx Relay turns your Lightning node into a personal
@@ -32,10 +32,10 @@ defaultPassword: ""
 submitter: Stakwork
 submission: https://github.com/getumbrel/umbrel/pull/341
 releaseNotes: >-
-  - Mentions and notifications
+  - Fix person uuid forwarded in tribes
 
-  - Additions for LSATs and second-brain
+  - Action history
 
-  - Bot DMs
-  
-  - Better bot auth
+  - Tribe leaderboard stuff
+
+  - DB config from env
