--- a/nolooking/umbrel-app.yml
+++ b/nolooking/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: nolooking
 category: Lightning Node Management 
 name: nolooking
-version: "0.1.0"
+version: "0.1.0-build-2"
 tagline: Use PayJoin to open channels for your lightning node
 description: >-
   Nolooking leverages Pay-to-Endpoint (payjoin) to negotiate a channel open for your lightning node, initiated by any BIP78 supporting wallet.
@@ -16,7 +16,7 @@ description: >-
 
   Please note that nolooking is still in early development. By using nolooking, you hold all responsibility for any loss of funds or other grievances which may arise. We are rapidly iterating on this product, feedback and contributions are strongly appreciated.
 releaseNotes: >-
-  v0.1.0 -- Initial Halloween alpha release - many more features to come!
+  - Allow access to /pj without Umbrel authentication
 developer: nolooking
 website: https://nolooking.chaincase.app
 dependencies:
