--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: suredbits-wallet
 category: Finance
 name: Suredbits Wallet
-version: "1.9.6"
+version: "1.9.7"
 tagline: A universal DLC wallet
 description: >-
   The Suredbits Wallet is your one stop shop for building Discreet
@@ -14,7 +14,7 @@ description: >-
 
   WARNING: This is an Alpha software, don't put too much money in.
 releaseNotes: >
-  - Add network notifications for failures while negotiating a DLC, fix wallet bug with balances not being moved from unconfirmed -> confirmed 
+  - Fix bug where we weren't categorizing DLCs correctly by protocol version. 
 
 developer: Suredbits
 website: https://suredbits.com
