update app dependency

--- a/tautulli/umbrel-app.yml
+++ b/tautulli/umbrel-app.yml
@@ -48,7 +48,8 @@ description: >-
   - And many more!!
 developer: JonnyWong16
 website: https://tautulli.com/
-dependencies: []
+dependencies:
+  - plex
 repo: https://github.com/Tautulli/Tautulli
 support: https://github.com/Tautulli/Tautulli/wiki
 port: 8212
