--- a/nolooking/docker-compose.yml
+++ b/nolooking/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/pj"
   
   server:
-    image: satsale/nolooking:0.1.2@sha256:0e26450f6be181d2392bb51b7ecc69446d782d778622e5634c85f54c62a2fdd2
+    image: chaincase/nolooking:v0.2.1-alpha@sha256:905b6f8cb89a292e5f0d6cad3b5a093751725cb3d4981e046f9aac67fc201c1b
     restart: on-failure
     stop_grace_period: 1m
     init: true
