--- a/nolooking/umbrel-app.yml
+++ b/nolooking/umbrel-app.yml
@@ -2,8 +2,8 @@ manifestVersion: 1
 id: nolooking
 category: Lightning Node Management 
 name: nolooking
-version: "0.1.0-build-2"
-tagline: Use PayJoin to open channels for your lightning node
+version: "0.2.1-alpha"
+tagline: Open all your channels in one transaction
 description: >-
   Nolooking leverages Pay-to-Endpoint (payjoin) to negotiate a channel open for your lightning node, initiated by any BIP78 supporting wallet.
 
@@ -28,7 +28,7 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-path: "/pj"
+path: "/"
 defaultUsername: ""
 defaultPassword: ""
 submitter: nolooking
